Update link ancora para cardapio

--- a/index.html
+++ b/index.html
@@ -107,15 +107,14 @@
                                 Aproveite nosso cardápio! Escolha o que desejar
                                 e recebe em sua casa de forma rápida e segura.
                             </p>
-                            <div class="wow fadeIn delay-05s">
-                                <a class="btn btn-yellow mt-4 mr-3">
+                            <div class="wow fadeIn delay-05s" >
+                                <a class="btn btn-yellow mt-4 mr-3" href="#ancora-cardapio">
                                     Ver cardápio
                                 </a>
                                 <a
                                     href="#"
                                     class="btn btn-white btn-icon-left mt-4"
                                     id="btnLigar"
-                                >
                                     <span class="icon-left">
                                         <i class="fa fa-phone"></i>
                                     </span>
@@ -228,7 +227,7 @@
                 <div class="row">
                     <div class="col-12 col-one text-center mb-5 wow fadeIn">
                         <span class="hint-title"><b>Cardápio</b></span>
-                        <h1 class="title">
+                        <h1 class="title" id="ancora-cardapio">
                             <b>Conheça o nosso cardápio</b>
                         </h1>
                     </div>
